test/cases/compile_errors/unhandled_enum_value_in_switch_with_enum_declared_in_other_file.zig
const std = @import("std");

pub export fn entry1() void {
    const alignment: std.fmt.Alignment = .center;
    switch (alignment) {}
}

// error
// backend=stage2
// target=native
//
// :5:5: error: switch must handle all possibilities
// :?:?: note: unhandled enumeration value: 'left'
// :?:?: note: unhandled enumeration value: 'center'
// :?:?: note: unhandled enumeration value: 'right'
// :?:?: note: enum 'fmt.Alignment' declared here
